tests/integration/targets/playbooks/provision_playbook/example.com/platform/opa-gatekeeper/policies/host-filesystem/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostFilesystem
metadata:
  name: psp-host-filesystem
spec:
  match:
    kinds:
      - apiGroups:
          - ""
        kinds: 
          - Pod
    excludedNamespaces:
      - elastic-system
      - kube-system
  parameters:
    allowedHostPaths: []
